<resources xmlns:tools="http://schemas.android.com/tools">
    <!--App Name and Screen Titles-->
    <string name="app_name">My Contacts</string>
    <string name="contact_list_title">Contacts</string>
    <string name="onboarding_title">Hello!</string>
    <string name="favorite_contacts_title">Favorite Contacts</string>
    <string name="profile_title">Your Profile</string>
    <string name="contact_input_title">Contact Input</string>

    <!--Bottom Navigation Items-->
    <string name="contacts">Contacts</string>
    <string name="account">Me</string>
    <string name="favorites">Favorites</string>

    <!--Image Descriptions-->
    <string name="avatar">avatar</string>
    <string name="add_to_favorites">add to favorites</string>
    <string name="remove_photo">Remove photo</string>
    <string name="profile_avatar">profile avatar</string>

    <!--Contact List Screen-->
    <string name="empty_list_message_title">Contact list is empty</string>
    <string name="no_contacts_added_message">Add new contacts or sync them from your phone</string>
    <string name="no_favorite_contacts_message">Make important contacts favorites</string>

    <!--Input Contact-->
    <string name="enter_contacts_name_hint">Enter Contact\'s Name</string>
    <string name="enter_contacts_number_hint">Enter Contact\'s Number</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="empty_value">Value is empty</string>

    <!--Profile Screen-->
    <string name="profile_statistics">Statistics:</string>
    <string name="profile_contacts_count">Number of contacts: %1$d</string>
    <string name="profile_fav_contacts_count">Number of favorite contacts: %1$d</string>
    <string name="profile_data">Personal Data:</string>
    <string name="input_name">Input your name</string>
    <string name="input_number">Input your number</string>
    <string name="data_saved">Data has been saved</string>

    <!--OnBoarding Carousel Items-->
    <string-array name="onboarding_texts" tools:ignore="InconsistentArrays">
        <item>The My Contacts application will allow you to store a list of your contacts in a convenient way</item>
        <item>You can add contacts manually or sync with your contacts on your phone</item>
        <item>You can add contacts to favorites</item>
        <item>You can easily make a call through this application</item>
        <item>On the Me screen you can see statistics about yourself</item>
    </string-array>


    <!--Toolbar Custom Action Descriptions-->
    <string name="add_contact">Add Contact</string>
    <string name="clear_all">Clear All Contacts</string>
    <string name="next">Next</string>
    <string name="sync_contacts">Sync Contacts</string>

    <!--Contact PopupMenu Item Titles-->
    <string name="change_data">Change Contact Data</string>
    <string name="call_contact">Call Contact</string>
    <string name="delete_contact">Delete Contact</string>

    <!--Denied Permission Dialog-->
    <string name="denied_permission_dialog_title">Permissions denied</string>
    <string name="give_permissions_message">You have denied %1$s forever. You Can Change your decision in app settings.\n\nWould you like to open app setting?</string>
    <string name="open_settings">Open</string>
    <string name="close_dialog">Close</string>
    <string name="dont_ask_again">Close and don\'t ask again</string>
    <string name="denied_permission_call">make calls</string>
    <string name="denied_permission_sync_contacts">sync contacts</string>
    <string name="no_call_permission">No call permission exist</string>
    <string name="no_read_contact_permission">No read phone contacts exist</string>

    <!--Confirmation Dialog-->
    <string name="confirm_dialog_title">Are you sure?</string>
    <string name="confirm_dialog_positive">Yes</string>
    <string name="confirm_dialog_negative">No</string>
    <string name="confirm_dialog_clear_contacts_message">All contacts will be deleted</string>
    <string name="confirm_dialog_sync_message">All contacts from the phone will be added to the application</string>

    <!--ExceptionMessages-->
    <string name="fail">An unexpected error has occurred</string>
    <string name="call_failed">Impossible to call</string>
    <string name="sync_failed">Synchronization failed</string>
    <string name="get_contact_list_failed">Getting contact list failed</string>
</resources>