<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <include
        android:id="@+id/inputImageLayout"
        layout="@layout/part_image_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/input_field_between_distance"
        android:hint="@string/enter_contacts_name_hint"
        app:layout_constraintEnd_toEndOf="@+id/inputImageLayout"
        app:layout_constraintStart_toStartOf="@+id/inputImageLayout"
        app:layout_constraintTop_toBottomOf="@+id/inputImageLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputNameEditText"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/input_field_between_distance"
        android:hint="@string/enter_contacts_number_hint"
        app:layout_constraintEnd_toEndOf="@+id/inputImageLayout"
        app:layout_constraintStart_toStartOf="@+id/inputImageLayout"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputNumberEditText"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:minWidth="100dp"
        android:text="@string/cancel"
        android:layout_marginTop="@dimen/input_field_between_distance"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:minWidth="100dp"
        android:text="@string/confirm"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
        app:layout_constraintTop_toTopOf="@+id/cancelButton" />

</androidx.constraintlayout.widget.ConstraintLayout>